--- a/css/styles.css
+++ b/css/styles.css
@@ -77,3 +77,9 @@ footer{
     margin-top: 10px;
     background-color: rgb(210, 214, 218);
 }
+
+.container-card{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
