--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@
 .slide{
     margin-top: 10px;
 }
+
 .slide img{
     height: 65vh;
 }
@@ -40,25 +41,64 @@
 
 /*imagenes Baby booys*/
 
-.remeraAzul{
+.ropa-bohemia{
     height: 300px;
     width: 300px;
 }
-.zapatillaNiño{
+.conjunto-niño{
     height: 300px;
     width: 300px;
 }
 
 /*imagenes Baby girl*/
-.camperaRoja{
-    height: 300px;
-    width: 300px;
-}
-.sacoGris{
-    height: 300px;
-    width: 300px;
+.tituloPrincipal{
+    background-color:rgb(70, 187, 187) ;
+    text-align: center;
+    padding: 10px;
 }
 
+.menu-hijo{
+    list-style: none;
+        display: flex;
+        gap: 15px;
+        margin: 20px;
+}
+  .menu-nieto{
+    background-color: white;
+    padding: 10px;
+    text-shadow: 3px 2px 5px black;
+    border-radius: 5px;
+    box-shadow: 3px 2px 5px black;
+    
+  }
+.menu-nieto:hover{
+ 
+    background-color: rgb(28, 212, 212);
+}
+
+.vestido-fantasia{
+    margin: 5px;
+    height: 300px;
+    width: 300px; 
+}
+.vestido-blanco{
+    padding: 5px;
+    height: 330px;
+    width: 300px;
+}
+p{
+    margin: 5px;
+    padding: 5px;
+    font-size: 1.2rem;
+}
+.conteiner-bg{
+   height: 700px; 
+   display: grid;
+   grid-template-columns:30% 70%;
+}
+.descripcion-producto{
+    margin: 5px;
+}
 
     
 
@@ -79,6 +119,8 @@
 }
 .button-beba:hover{
     background-color: rgb(105, 212, 212);
+    box-shadow: 1px 1px 2px black;
+    transform: scale(0.9);
 }
 
 .button-beba a{
@@ -86,11 +128,7 @@
     color: white;
 }
 
-.referenciaFinal{
-    padding: 10px;
-    justify-content: space-around;
-   
-}
+
 /*footer*/
 footer{
     margin-top: 10px;
@@ -98,10 +136,68 @@ footer{
     align-items: center;
 }
 
+.referenciaFinal {
+    padding: 10px;
+    justify-content: space-around;
+}
+
 .container-card{
-    margin: 5px;
+    margin: 10px;
     padding:5px 20px 5px 20px ;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
 }
+/*media query index */
+
+@media (min-width:360px) and (max-width:578px) {
+    .slide img {
+            height: 40vh;
+        }
+    .container .buttons {
+            margin-top: 10px;
+            display: flex;
+           flex-direction: column;
+           align-items: center;
+        }
+                 .container-card .card {
+                     margin: 5px;
+                 }
+
+    .referenciaFinal {
+            padding: 10px;
+            flex-direction: column;
+            text-align: center;
+        } 
+    }
+
+
+@media (min-width:578px) and (max-width:920px) {
+    .slide img {
+            height: 50vh;
+        }
+         .referenciaFinal {
+             margin: 10px;
+         }
+                 .container-card .card{
+                    margin: 8px;
+                 }
+}
+    
+
+@media (min-width:920px) and (max-width:1216px){
+    .container-card .card {
+            margin: 8px;
+        }
+}
+
+
+
+
+
+
+
+
+
+
+
