--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*reset*/
 * {
   margin: 0;
@@ -7,7 +8,7 @@
 .titulo-pagina {
   background-color: #46bbbb; }
 
-.iconos ul li {
+.lista .iconos ul li {
   margin: 10px;
   padding: 50px;
   display: inline-block; }
@@ -57,7 +58,7 @@
 /*footer*/
 .piePagina {
   margin-top: 10px;
-  background-color: #d2d6da; }
+  background-color: #ccc; }
 
 .referenciaFinal {
   padding: 10px;
@@ -69,6 +70,24 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap; }
+
+footer .envios {
+  color: #812d2d; }
+
+footer .cuotas {
+  color: #2f6464; }
+
+footer .pick-up {
+  color: #7a5f2d; }
+
+footer .whatsapp {
+  color: #229222; }
+
+footer .instagram {
+  color: #d12929; }
+
+footer .facebook {
+  color: #21217e; }
 
 /*media query index */
 @media (min-width: 360px) and (max-width: 578px) {
@@ -130,7 +149,7 @@
     grid-area: main-bg; }
   .contain .piePagina {
     grid-area: footer-bg;
-    background-color: #cccc; }
+    background-color: #ccc; }
   .contain .section-bg {
     grid-area: section-bg; }
 
@@ -197,9 +216,6 @@
     grid-template-columns: 1fr 4fr 4fr auto;
     grid-template-rows: 0.2fr 4fr 4fr 1fr;
     grid-template-areas: "header-bg header-bg header-bg header-bg" "main-bg main-bg main-bg section-bg" "main-bg main-bg main-bg section-bg" "footer-bg footer-bg footer-bg footer-bg"; }
-  .menu-hijo {
-    display: flex;
-    justify-content: space-between; }
   .main-bg .descripcion-producto {
     margin-top: 15px; }
   .titulo-vestido {
@@ -209,3 +225,113 @@
     margin: 10px;
     padding: 10px;
     margin-top: 5px; } }
+
+.conjunto-niño {
+  width: 300px;
+  height: 300px; }
+
+.conjunto-bohemio {
+  width: 300px;
+  height: 300px; }
+
+.contain-bb {
+  display: grid;
+  grid-template-columns: 2fr 2fr 1fr 1fr;
+  grid-template-rows: 0.2fr 2.5fr 2.5fr 1fr;
+  grid-template-areas: "header-bb header-bb header-bb header-bb" "main-bb main-bb section-bb section-bb" "main-bb main-bb section-bb section-bb" "footer-bb footer-bb footer-bb footer-bb"; }
+  .contain-bb .header-bb {
+    width: 100%;
+    grid-area: header-bb;
+    align-items: center;
+    justify-content: space-around; }
+  .contain-bb .main-bb {
+    grid-area: main-bb; }
+  .contain-bb .section-bb {
+    grid-area: section-bb; }
+  .contain-bb .footer-bb {
+    grid-area: footer-bb;
+    background-color: #ccc; }
+
+.container-1 {
+  text-align: center;
+  border: 2px solid black;
+  background-color: #ccc;
+  margin-right: 2px; }
+  .container-1 .texto-bb {
+    font-size: 30px; }
+  .container-1 img {
+    border-radius: 5px;
+    margin: 10px;
+    align-items: center; }
+
+.section-bb {
+  text-align: center;
+  border: 2px solid black;
+  background-color: #ccc; }
+  .section-bb img {
+    border-radius: 5px;
+    margin: 10px;
+    align-items: center;
+    justify-content: center; }
+  .section-bb .texto-bb {
+    font-size: 20px;
+    margin: 5px; }
+
+/*media query  pagina baby boy */
+@media (min-width: 360px) and (max-width: 578px) {
+  .contain-bb {
+    display: grid;
+    flex-direction: row;
+    grid-template-columns: 2fr auto;
+    grid-template-rows: 2fr auto;
+    grid-template-areas: "header-bb header-bb" "main-bb main-bb" "section-bb section-bb " "footer-bb footer-bb"; } }
+
+@media (min-width: 578px) and (max-width: 920px) {
+  .contain-bb {
+    display: grid;
+    grid-template-columns: 2fr auto auto;
+    grid-template-rows: 2fr auto auto;
+    grid-template-areas: "header-bb header-bb header-bb" "main-bb main-bb main-bb" "section-bb section-bb section-bb" "footer-bb footer-bb footer-bb"; } }
+
+@media (min-width: 920px) and (max-width: 1216px) {
+  .contain-bb {
+    display: grid;
+    flex-direction: row;
+    grid-template-columns: 2fr auto 2fr auto;
+    grid-template-rows: 0.2fr auto 2fr auto;
+    grid-template-areas: "header-bb header-bb header-bb header-bb" "main-bb main-bb section-bb section-bb" "main-bb main-bb section-bb section-bb" "footer-bb footer-bb footer-bb footer-bb"; } }
+
+.tittleContacto {
+  margin: 10px;
+  font-size: 25px; }
+
+.subTittle {
+  margin-left: 3px; }
+
+.containerForm {
+  display: flex;
+  justify-content: center; }
+
+.containerIframe {
+  margin-top: 10px;
+  display: flex;
+  justify-content: center; }
+
+.containerVideo {
+  margin-top: 10px;
+  padding: 5px;
+  display: flex;
+  justify-content: center; }
+
+.containerParrafo {
+  display: flex;
+  margin: 5px;
+  justify-content: flex-start; }
+  .containerParrafo .p {
+    font-size: 25px;
+    font-style: italic; }
+
+.enlace {
+  font-size: 20px;
+  margin: 5px;
+  text-decoration: none; }
