--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,15 +8,15 @@
 //import
 @import "utilidades/variables";
 @import "utilidades/mixin";
-
+@import "utilidades/mapas";
 //nav
 
     .titulo-pagina {
     background-color: $color-titulo;
     }
  
-   
-    .iconos{ 
+   .lista{
+        .iconos{ 
              ul{
                  li {
                        margin: 10px;
@@ -24,8 +24,8 @@
                        display: inline-block;
                    }
                }
-            }
-
+                        }
+    }   
 .nav-direction {
     background-color: $color-nav;
     padding: 5px 20px 5px 20px;
@@ -73,7 +73,7 @@
 /*footer*/
 .piePagina {
     margin-top: 10px;
-    background-color: rgb(210, 214, 218);
+    background-color: $color-footer;
 }
 .referenciaFinal {
     padding: 10px;
@@ -85,6 +85,13 @@
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+}
+footer{
+    @each $frases, $color in $colores-redes {
+        .#{$frases}{
+            color: $color
+        }
+    }
 }
 /*media query index */
 @media (min-width:360px) and (max-width:578px) {
@@ -161,7 +168,7 @@
     
         .piePagina {
             grid-area: footer-bg;
-            background-color: #cccc;
+            background-color: $color-footer;
         }
                 .section-bg {
                     grid-area: section-bg;
@@ -172,9 +179,11 @@
     display: flex;
     flex-direction: row;
 }
-.main-bg .descripcion-producto p {
+.main-bg{
+ .descripcion-producto p {
     margin-top: 10px;
     padding: 10px;
+    }
 }
 .main-bg .img {
     border-radius: 5px;
@@ -220,9 +229,11 @@
         margin: 10px;
         padding: 10px;
     }
-    .section-bg .descripcion-producto {
-        display: block;
-    }
+    .section-bg{
+        .descripcion-producto {
+            display: block;
+        }
+     }
     .parrafo {
         margin-top: 10px;
         padding: 15px;
@@ -258,10 +269,6 @@
             "main-bg main-bg main-bg section-bg"
             "footer-bg footer-bg footer-bg footer-bg";
     }
-    .menu-hijo {
-        display: flex;
-        justify-content: space-between;
-    }
     .main-bg .descripcion-producto {
         margin-top: 15px;
     }
@@ -274,4 +281,156 @@
         padding: 10px;
         margin-top: 5px;
     }
+}
+//baby boy
+
+.conjunto-niño {
+@include medidas(300px, 300px);
+}
+.conjunto-bohemio {
+ @include medidas(300px, 300px);
+}
+.contain-bb {
+    display: grid;
+    grid-template-columns: 2fr 2fr 1fr 1fr;
+    grid-template-rows: 0.2fr 2.5fr 2.5fr 1fr;
+    grid-template-areas:
+        "header-bb header-bb header-bb header-bb"
+        "main-bb main-bb section-bb section-bb"
+        "main-bb main-bb section-bb section-bb"
+        "footer-bb footer-bb footer-bb footer-bb";
+.header-bb {
+    width: 100%;
+    grid-area: header-bb;
+    align-items: center;
+    justify-content: space-around;
+}
+.main-bb {
+    grid-area: main-bb;
+}
+.section-bb {
+    grid-area: section-bb;
+
+}
+.footer-bb {
+    grid-area: footer-bb;
+    background-color: $color-footer;
+}
+}
+.container-1 {
+    text-align: center;
+    border: 2px solid black;
+    background-color: $color-footer;
+    margin-right: 2px;
+        .texto-bb {
+            font-size: 30px;
+            }
+         img {
+            border-radius: 5px;
+            margin: 10px;
+            align-items: center;
+        }
+       
+                   
+}
+.section-bb {
+    text-align: center;
+    border: 2px solid black;
+    background-color: $color-footer;
+    img {
+        border-radius: 5px;
+        margin: 10px;
+        align-items: center;
+        justify-content: center;
+        }
+  .texto-bb {
+      font-size: 20px;
+      margin: 5px;
+  }
+}
+/*media query  pagina baby boy */
+@media (min-width:360px) and (max-width:578px) {
+    .contain-bb {
+        display: grid;
+        flex-direction: row;
+        grid-template-columns: 2fr auto;
+        grid-template-rows: 2fr auto;
+
+        grid-template-areas:
+            "header-bb header-bb"
+            "main-bb main-bb"
+            "section-bb section-bb "
+            "footer-bb footer-bb";
+    }
+}
+
+@media (min-width:578px) and (max-width:920px) {
+    .contain-bb {
+        display: grid;
+        grid-template-columns: 2fr auto auto;
+        grid-template-rows: 2fr auto auto;
+
+        grid-template-areas:
+            "header-bb header-bb header-bb"
+            "main-bb main-bb main-bb"
+            "section-bb section-bb section-bb"
+            "footer-bb footer-bb footer-bb";
+    }
+}
+
+@media (min-width:920px) and (max-width:1216px) {
+    .contain-bb {
+        display: grid;
+        flex-direction: row;
+        grid-template-columns: 2fr auto 2fr auto;
+        grid-template-rows: 0.2fr auto 2fr auto;
+
+        grid-template-areas:
+            "header-bb header-bb header-bb header-bb"
+                "main-bb main-bb section-bb section-bb"
+                "main-bb main-bb section-bb section-bb"
+                "footer-bb footer-bb footer-bb footer-bb";
+}
+}
+
+
+//Contacto
+.tittleContacto{
+    margin: 10px;
+    font-size: 25px;
+}
+.subTittle{
+margin-left: 3px;
+}
+.containerForm{
+    display: flex;
+    justify-content: center;
+}
+.containerIframe{
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+.containerVideo{
+    margin-top: 10px;
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+}
+
+.containerParrafo{
+    display: flex;
+    margin: 5px;
+    justify-content: flex-start;
+    .p{
+        font-size: 25px;
+        font-style: italic;
+    }
+}
+
+.enlace{
+    font-size: 20px;
+    margin: 5px;
+    text-decoration: none;
 }
