--- a/scss/utilidades/_mixin.scss
+++ b/scss/utilidades/_mixin.scss
@@ -9,3 +9,8 @@
         align-items: center;
    
 }
+@mixin display {
+        margin-top: 10px;
+        display: flex;
+        justify-content: center;
+}
