--- a/css/styles.css
+++ b/css/styles.css
@@ -56,9 +56,8 @@
   color: white; }
 
 /*footer*/
-.piePagina {
-  margin-top: 10px;
-  background-color: #ccc; }
+.footer-bb {
+  background-color: #a3a3a3; }
 
 .referenciaFinal {
   padding: 10px;
@@ -100,10 +99,16 @@ footer .facebook {
     align-items: center; }
   .container-card .card {
     margin: 5px; }
-  .referenciaFinal {
-    padding: 10px;
+  .footer-bb {
+    background-color: #a3a3a3;
     flex-direction: column;
-    text-align: center; } }
+    align-items: center;
+    margin: 0px; }
+  .referenciaFinal {
+    padding: 5px;
+    flex-direction: column;
+    align-items: center;
+    margin: 0px; } }
 
 @media (min-width: 578px) and (max-width: 920px) {
   .slide img {
@@ -147,9 +152,10 @@ footer .facebook {
     flex-wrap: wrap;
     text-align: center;
     grid-area: main-bg; }
-  .contain .piePagina {
+  .contain .footer-bb {
     grid-area: footer-bg;
-    background-color: #ccc; }
+    background-color: #a3a3a3;
+    margin: 0px; }
   .contain .section-bg {
     grid-area: section-bg; }
 
@@ -190,10 +196,10 @@ footer .facebook {
     margin-top: 10px;
     padding: 15px;
     margin: 5px; }
-  .piePagina {
+  .footer-bb {
     display: flex;
-    margin: 10px;
-    padding: 10px; }
+    margin: 0px;
+    padding: 0px; }
   .section-bg .descripcion-producto {
     display: block; }
   .parrafo {
@@ -250,12 +256,12 @@ footer .facebook {
     grid-area: section-bb; }
   .contain-bb .footer-bb {
     grid-area: footer-bb;
-    background-color: #ccc; }
+    background-color: #a3a3a3; }
 
 .container-1 {
   text-align: center;
   border: 2px solid black;
-  background-color: #ccc;
+  background-color: #a3a3a3;
   margin-right: 2px; }
   .container-1 .texto-bb {
     font-size: 30px; }
@@ -267,7 +273,7 @@ footer .facebook {
 .section-bb {
   text-align: center;
   border: 2px solid black;
-  background-color: #ccc; }
+  background-color: #a3a3a3; }
   .section-bb img {
     border-radius: 5px;
     margin: 10px;
@@ -275,7 +281,7 @@ footer .facebook {
     justify-content: center; }
   .section-bb .texto-bb {
     font-size: 20px;
-    margin: 5px; }
+    margin: 0px; }
 
 /*media query  pagina baby boy */
 @media (min-width: 360px) and (max-width: 578px) {
@@ -284,7 +290,31 @@ footer .facebook {
     flex-direction: row;
     grid-template-columns: 2fr auto;
     grid-template-rows: 2fr auto;
-    grid-template-areas: "header-bb header-bb" "main-bb main-bb" "section-bb section-bb " "footer-bb footer-bb"; } }
+    grid-template-areas: "header-bb header-bb" "main-bb main-bb" "section-bb section-bb " "footer-bb footer-bb"; }
+  .container-1 {
+    margin: 0px;
+    border: 1px solid black; }
+    .container-1 .texto-bb {
+      font-size: 18px;
+      padding: 10px; }
+    .container-1 img {
+      border-radius: 5px;
+      margin: 0px;
+      align-items: center; }
+  .section-bb {
+    text-align: center;
+    border: 0px;
+    background-color: #a3a3a3;
+    border: 1px solid black; }
+    .section-bb img {
+      border-radius: 5px;
+      margin: 10px;
+      align-items: center;
+      justify-content: center; }
+    .section-bb .texto-bb {
+      font-size: 18px;
+      margin: 0px;
+      padding: 10px; } }
 
 @media (min-width: 578px) and (max-width: 920px) {
   .contain-bb {
@@ -335,3 +365,95 @@ footer .facebook {
   font-size: 20px;
   margin: 5px;
   text-decoration: none; }
+
+@media (min-width: 360px) and (max-width: 578px) {
+  .tittleContacto {
+    margin: 10px;
+    font-size: 25px; }
+  .subTittle {
+    margin-left: 3px; }
+  .containerForm {
+    display: flex;
+    justify-content: center; }
+  .containerIframe {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center; }
+  .containerVideo {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    padding: 5px; }
+  .containerParrafo {
+    display: flex;
+    margin: 5px;
+    justify-content: flex-start; }
+    .containerParrafo .p {
+      font-size: 25px;
+      font-style: italic; }
+  .enlace {
+    font-size: 20px;
+    margin: 5px;
+    text-decoration: none; }
+  .footer-bb {
+    display: flex; } }
+
+@media (min-width: 578px) and (max-width: 920px) {
+  .tittleContacto {
+    margin: 10px;
+    font-size: 25px; }
+  .subTittle {
+    margin-left: 3px; }
+  .containerForm {
+    display: flex;
+    justify-content: center; }
+  .containerIframe {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center; }
+  .containerVideo {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    padding: 5px; }
+  .containerParrafo {
+    display: flex;
+    margin: 5px;
+    justify-content: flex-start; }
+    .containerParrafo .p {
+      font-size: 25px;
+      font-style: italic; }
+  .enlace {
+    font-size: 20px;
+    margin: 5px;
+    text-decoration: none; } }
+
+@media (min-width: 920px) and (max-width: 1216px) {
+  .tittleContacto {
+    margin: 10px;
+    font-size: 25px; }
+  .subTittle {
+    margin-left: 3px; }
+  .containerForm {
+    display: flex;
+    justify-content: center; }
+  .containerIframe {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center; }
+  .containerVideo {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    padding: 5px; }
+  .containerParrafo {
+    display: flex;
+    margin: 5px;
+    justify-content: flex-start; }
+    .containerParrafo .p {
+      font-size: 25px;
+      font-style: italic; }
+  .enlace {
+    font-size: 20px;
+    margin: 5px;
+    text-decoration: none; } }
