--- a/scss/utilidades/_variables.scss
+++ b/scss/utilidades/_variables.scss
@@ -2,4 +2,4 @@ $color-titulo: rgb(70, 187, 187);
 $color-nav:white;
 $color-nav-hover: rgb(28, 212, 212);
 $color-nav-button: rgb(114, 163, 163);
-$color-footer: #ccc;
+$color-footer: rgb(163, 163, 163);
